--- a/src/components/general/SideSheet/Modal/styles.less
+++ b/src/components/general/SideSheet/Modal/styles.less
@@ -92,36 +92,46 @@
     }
 
     .resizeHandle {
-        width: calc(var(--grid-unit) * 1px);
+        width: calc(var(--grid-unit) * 4px);
         position: absolute;
+        z-index: 2;
         top: 0;
         bottom: 0;
-        left: calc(var(--grid-unit) * -.5px);
+        left: calc(var(--grid-unit) * -2px);
         cursor: col-resize;
+
+        .bar {
+            width: calc(var(--grid-unit) * 1px);
+            position: absolute;
+            z-index: 1;
+            top: 0;
+            bottom: 0;
+            left: 50%;
+            transform: translateX(-50%);
+        }
     
         .indicator {
             position: absolute;
             top: 50%;
-            left: calc(var(--grid-unit) * -1px);
+            left: 50%;
             width: calc(var(--grid-unit) * 3px);
             height: calc(var(--grid-unit) * 3px);
             background: var(--color-white);
             border-radius: 4px;
-            transform: translateY(-50%);
+            transform: translateY(-50%) translateX(-50%);
             display: flex;
             align-content: center;
             align-items: center;
             opacity: 0;
             transition: opacity .2s;
+            z-index: 2;
         }
     
         &:hover {
-            background: rgba(0, 0, 0, .1);
-        }
-    }
-    
-    &:hover {
-        .resizeHandle {
+            .bar {
+                background: rgba(0, 0, 0, .1);
+            }
+
             .indicator {
                 opacity: 1;
             }
@@ -130,6 +140,16 @@
 
     &.isResizing {
         user-select: none;
+
+        .resizeHandle {
+            .bar {
+                background: rgba(0, 0, 0, .1);
+            }
+            
+            .indicator {
+                opacity: 1;
+            }
+        }
     }
 }
 
