Make a disc skeleton

--- a/src/components/feedback/Skeleton/styles.less
+++ b/src/components/feedback/Skeleton/styles.less
@@ -14,6 +14,10 @@
     height: calc(var(--grid-unit) * 4px);
 }
 
+.disc{
+    border-radius: 50%;
+}
+
 @keyframes skeleton-slide {
     0% {
         background-position: 0% 0%;
