fixed skeleton disc and added it to person card and person photo

--- a/src/components/people/PersonCard/styles.less
+++ b/src/components/people/PersonCard/styles.less
@@ -5,6 +5,7 @@
     .details {
         display: flex;
         flex-direction: column;
+        flex-grow: 1;
         justify-content: center;
         margin-left: var(--details-spacing);
 
