Added hide handle to slider

--- a/src/components/general/Slider/styles.less
+++ b/src/components/general/Slider/styles.less
@@ -76,6 +76,10 @@
             border-width: 2px;
         }
 
+        &.hideHandle {
+            display: none;
+        }
+
         &:hover {
             .dot {
                 border-color: var(--color-primary-hover);
