--- a/src/components/feedback/Skeleton/styles.less
+++ b/src/components/feedback/Skeleton/styles.less
@@ -14,6 +14,62 @@
     height: calc(var(--grid-unit) * 4px);
 }
 
+.disc{
+    border-radius: 50%;
+    display: flex;
+    position: relative;
+    width: var(--disc-size);
+    height: var(--disc-size);
+    
+        &.xlarge {
+            &.comfortable {
+                // 56x56
+                --disc-size: calc(var(--grid-unit) * 7px);
+            }
+    
+            &.compact {
+                // 48x48
+                --disc-size: calc(var(--grid-unit) * 6px);
+            }
+        }
+    
+        &.large {
+            &.comfortable {
+                // 40x40
+                --disc-size: calc(var(--grid-unit) * 5px);
+            }
+    
+            &.compact {
+                // 32x32
+                --disc-size: calc(var(--grid-unit) * 4px);
+            }
+        }
+    
+        &.medium {
+            &.comfortable {
+                // 32x32
+                --disc-size: calc(var(--grid-unit) * 4px);
+            }
+    
+            &.compact {
+                // 24x24
+                --disc-size: calc(var(--grid-unit) * 3px);
+            }
+        }
+    
+        &.small {
+            &.comfortable {
+                // 24x24
+                --disc-size: calc(var(--grid-unit) * 3px);
+            }
+    
+            &.compact {
+                // 16x16
+                --disc-size: calc(var(--grid-unit) * 2px);
+            }
+        }
+}
+
 @keyframes skeleton-slide {
     0% {
         background-position: 0% 0%;
