Removed padding and border i data table list component + made filter pane consistent header with sidesheet

--- a/src/components/data/DataTable/styles.less
+++ b/src/components/data/DataTable/styles.less
@@ -99,8 +99,7 @@
 
         li {
             margin: 0;
-            padding: calc(var(--grid-unit) * var(--list-vertical-padding-multiplier)) 0;
-            border-bottom: 1px solid var(--border-color);
+            padding: 0;
         }
     }
 
