Add elipsis to navigation drawer

--- a/src/components/general/NavigationDrawer/components/styles.less
+++ b/src/components/general/NavigationDrawer/components/styles.less
@@ -35,6 +35,9 @@
 
         .linkText{
             width: .grid-unit(27px)[];
+            overflow: hidden;
+            text-overflow: ellipsis;
+            white-space: nowrap;
         }
     
     }
