Add tooltip when text got ellipsis

--- a/src/components/general/NavigationDrawer/components/styles.less
+++ b/src/components/general/NavigationDrawer/components/styles.less
@@ -64,6 +64,12 @@
         align-self: center;
     }
 
+    .groupingContainer{
+        display: flex; 
+        justify-content: flex-end;
+        width: 100%;
+    }
+
     &:hover{
         background-color: var(--color-primary-hover-alt1);
         color: var(--color-primary-hover);
@@ -110,6 +116,12 @@
             padding-left: .grid-unit(7px)[];
         }
 
+        .sectionContainer{
+            display: flex; 
+            justify-content: flex-end;
+            width: 100%;
+        }
+
     }
 
     &.isCollapsed{
@@ -119,6 +131,8 @@
         }
     }
 }
+
+
 
 .label{
     width: 100%;
