Set max-height on dropdowns based on distance from window top

--- a/src/components/general/Dropdown/styles.less
+++ b/src/components/general/Dropdown/styles.less
@@ -6,6 +6,8 @@
     pointer-events: all;
     background: white;
     border-radius: 4px;
+    overflow: auto;
+    min-height: calc(var(--grid-unit) * 10px);
 
     &.justifyLeft {
         right: 0;
