--- a/src/components/core/Root/styles.less
+++ b/src/components/core/Root/styles.less
@@ -83,10 +83,8 @@
 .overlay {
     position: fixed;
     overflow: visible;
-    width: 0;
-    height: 0;
-    width: 0;
-    height: 0;
+    // width: 0;
+    // height: 0;
     pointer-events: none;
     top: 0; left: 0;
     z-index: var(--overlay-z-index);
