--- a/src/components/general/Accordion/styles.less
+++ b/src/components/general/Accordion/styles.less
@@ -17,7 +17,8 @@
             align-items: center;
             border-bottom: 1px solid var(--color-black-alt4);
             cursor: pointer;
-            &.isOpen{
+
+            &.isOpen {
                 border: none;
             }
 
@@ -26,6 +27,7 @@
                 line-height: .grid-unit(3px)[];
                 padding: 0 .grid-unit(2px)[];
             }
+
             .collapseIcon {
                 height: var(--header-height);
                 width: var(--icon-width);
@@ -35,48 +37,56 @@
                 color: var(--color-primary);
             }
 
-            &:hover{
+            &:hover {
                 background-color: var(--color-black-alt5);
             }
-            &.isOpen{
-                color:var(--color-primary);
+
+            &.isOpen {
+                color: var(--color-primary);
             }
 
-            &.rightAction{
+            &.rightAction {
                 flex-direction: row-reverse;
                 justify-content: flex-end;
             }
-        
+
             &.disabled {
                 cursor: not-allowed;
 
-                .label{
+                .label {
                     color: var(--color-black-alt2);
                 }
-                .collapseIcon{
+
+                .collapseIcon {
                     color: var(--color-black-alt4)
                 }
             }
 
-            &.compact{
+            &.compact {
                 --header-height: .grid-unit(4px)[];
                 --icon-width: .grid-unit(4px)[];
                 --header-font-size: 14px;
             }
-            &.comfortable{
+
+            &.comfortable {
                 --header-height: .grid-unit(6px)[];
                 --icon-width: .grid-unit(6px)[];
                 --header-font-size: .grid-unit(2px)[];
-                
+
             }
 
         }
-        .contentContainer{
+
+        .contentContainer {
             border: none;
-            max-height: 0;
             overflow: hidden;
-            
-            .content{
+            display: none;
+
+            &.isOpen {
+                display: block;
+            }
+
+            .content {
                 height: 100%;
                 border-bottom: 1px solid var(--color-black-alt4);
                 border-top: none;
