--- a/src/components/core/Root/styles.less
+++ b/src/components/core/Root/styles.less
@@ -90,8 +90,11 @@
 
 .snacks {
     position: fixed;
-    bottom: calc(var(--grid-unit) * 2px);
-    left: calc(var(--grid-unit) * 2px);
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
     overflow: visible;
     z-index: var(--snacks-z-index);
 }
