Add snackbar and banner presenters to modal sidesheet

--- a/src/components/feedback/Banner/styles.less
+++ b/src/components/feedback/Banner/styles.less
@@ -59,10 +59,9 @@
 
     .actions {
         padding-right: .grid-unit(2px)[];
-        padding-left: .grid-unit(11px)[];
         display: flex;
+        flex-shrink: 0;
         justify-content: flex-end;
-        width: 100%;
         justify-self: flex-end;
         
         @media (max-width: @mobile-max-width) {
