--- a/src/components/feedback/Banner/styles.less
+++ b/src/components/feedback/Banner/styles.less
@@ -3,7 +3,6 @@
 @import '~styles/variables.less';
 
 .container {
-    
     display: flex;
     border-bottom: 1px solid var(--color-black-alt4);
     align-items: center;
@@ -35,10 +34,9 @@
             font-size: 14px;
             line-height: .grid-unit(3px)[];
             overflow: hidden;
-            max-height: .grid-unit(6px)[];
-
         }
-        .icon{
+
+        .icon {
             align-self: center;
             padding-right: .grid-unit(3px)[];
 
@@ -61,10 +59,9 @@
 
     .actions {
         padding-right: .grid-unit(2px)[];
-        padding-left: .grid-unit(11px)[];
         display: flex;
+        flex-shrink: 0;
         justify-content: flex-end;
-        width: 100%;
         justify-self: flex-end;
         
         @media (max-width: @mobile-max-width) {
