--- a/src/components/feedback/Snackbar/styles.less
+++ b/src/components/feedback/Snackbar/styles.less
@@ -5,14 +5,16 @@
     --width-multiplier: 75px;
     background-color: var(--color-black-alt1);
     height: .grid-unit(6px)[];
-    width: calc(var(--width-multiplier)* var(--grid-unit));
+    width: calc(var(--width-multiplier) * var(--grid-unit));
+    max-width: calc(100% - (var(--grid-unit) * 8px));
     border-radius: 4px;
     display: flex;
     align-items: center;
-    position: fixed;
+    position: absolute;
     justify-content: space-between;
     transition: opacity .2s;
     opacity: 0;
+    pointer-events: all;
 
     @media (max-width: @mobile-max-width) {
         --width-multiplier: 38px;
@@ -68,22 +70,24 @@
     }
 
     &.left {
-        left: .grid-unit(1px)[];
-    }
-    &.right {
-        right: .grid-unit(1px)[];
+        left: .grid-unit(4px)[];
     }
 
-    &.center{
+    &.right {
+        right: .grid-unit(4px)[];
+    }
+
+    &.center {
         left: 50%;
         right: auto;
         transform: translateX(-50%);
     }
 
     &.top {
-        top: .grid-unit(1px)[];
+        top: .grid-unit(5px)[];
     }
+
     &.bottom {
-        bottom: .grid-unit(1px)[];
+        bottom: .grid-unit(5px)[];
     }
 }
