--- a/src/components/org/PositionCard/styles.less
+++ b/src/components/org/PositionCard/styles.less
@@ -155,14 +155,12 @@
         }
 
         .childPositionCount {
-                position: absolute;
                 display: flex;
                 flex-direction: column;
-                right: 0;
-                top: 0;
                 width: 100%;
+                height: 100%;
                 align-items: center;
-                padding-top: var(--child-position-padding);
+                justify-content: center;
                 font-size: var(--small-section-font-size);
         } 
 
