Use newest version of css-loader and add timestamp as hash prefix for css class names

--- a/src/components/feedback/Banner/styles.less
+++ b/src/components/feedback/Banner/styles.less
@@ -22,7 +22,7 @@
     .information {
         display:  flex;
         justify-self: flex-start;
-        width: 100%;
+        flex-grow: 1;
         margin: .grid-unit(2px)[];
         align-items: center;
         
