--- a/src/components/org/PositionCard/styles.less
+++ b/src/components/org/PositionCard/styles.less
@@ -1,14 +1,48 @@
 .context {
-    &.container {
-        width: var(--container-width);
-        padding: var(--container-padding);
-        box-sizing: border-box;
+    width: var(--container-width);
+    padding: var(--container-padding);
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    background-color: var(--color-white);
+    border: 1px solid var(--color-black-alt4);
+    border-radius: 4px;
+    position: relative;
+    transition: box-shadow .15s;
+
+    .rotationInstances {
+        border-top: 1px solid var(--color-black-alt4);
+        padding-top: calc(var(--grid-unit) * 1px);
+        margin-top: calc(var(--grid-unit) * 1px);
+
+        .assignee {
+            display: flex;
+            width: 100%;
+            align-items: center;
+
+            &:not(:last-child) {
+                padding-bottom: calc(var(--grid-unit) * .5px);
+
+            }
+            .assigneeInfo{
+                display: flex;
+                flex-direction: column;
+                padding-left: calc(var(--grid-unit) * 2px);
+
+                .name {
+                    font-size: var(--big-section-font-size);
+                }
+                .externalId {
+                    font-size: var(--small-section-font-size);
+                }
+            }
+
+        }
+    }
+
+    .container {
         display: flex;
-        background-color: var(--color-white);
-        border: 1px solid var(--color-black-alt4);
-        border-radius: 4px;
-        position: relative;
-        transition: box-shadow .15s;
+        flex-direction: row;
 
         &.futurePosition{
             background-color: #EEFCF2;
