--- a/src/components/people/PersonCard/styles.less
+++ b/src/components/people/PersonCard/styles.less
@@ -22,10 +22,16 @@
             font-weight: 600;
             font-size: 16px;
             margin-bottom: var(--name-spacing);
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
         }
         
         .email {
             font-size: 16px;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
         }
     }
 
