--- a/src/components/people/PersonCard/styles.less
+++ b/src/components/people/PersonCard/styles.less
@@ -8,10 +8,14 @@
         flex-grow: 1;
         justify-content: center;
         margin-left: var(--details-spacing);
+        overflow: hidden;
 
         .name {
             font-size: 16px;
             margin-bottom: var(--name-spacing);
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
 
             &.noMargin {
                 margin: 0px;
