Added fullscreen option for Modal sidesheet. uses same width as default maxWidth

--- a/src/components/general/SideSheet/Modal/styles.less
+++ b/src/components/general/SideSheet/Modal/styles.less
@@ -27,6 +27,10 @@
         }
     }
 
+    &.fullscreen {
+        --modal-size: calc(100vw - (var(--grid-unit) * 4px));
+    }
+
     &.xlarge {
         --modal-size: calc(var(--grid-unit) * 120px);
     }
