--- a/src/components/general/SearchableDropdown/styles.less
+++ b/src/components/general/SearchableDropdown/styles.less
@@ -10,7 +10,7 @@
     padding-left: calc(var(--grid-unit) * 2px);
     white-space: nowrap;
     overflow: hidden;
-    text-overflow: clip;
+    text-overflow: ellipsis;
 }
 
 .buttonContainer {
