--- a/src/styles/colors.less
+++ b/src/styles/colors.less
@@ -32,6 +32,11 @@
     --color-supplementary-alt1: #DEFAEB; // Soft mint
     --color-supplementary-alt2: #FBE5D5; // Spruce Wood
 
+    // Danger colors
+    --color-danger: #EB0000;
+    --color-danger-hover: #B30D2F;
+    --color-danger-highlight: #FFC1C1;
+
     // Non-brand colors
     --color-yellow: #FBCA36;
     --color-orange: #FF9200;
