Removed unused default style to notficationcard

--- a/src/components/general/AdaptiveCardViewer/styles.less
+++ b/src/components/general/AdaptiveCardViewer/styles.less
@@ -1,12 +1,8 @@
 .adaptiveCard {
-    border: 1px solid var(--color-black-alt4);
-    border-radius: 4px;
-
     &:focus {
-        box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.2), 0px 4px 5px rgba(0, 0, 0, 0.12), 0px 2px 4px rgba(0, 0, 0, 0.14) ;
+        box-shadow:none;
         outline: none;
     }
-
     button {
         display: flex;
         box-sizing: border-box;
